--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -1,41 +1,45 @@
 variables:
-    ArmTemplateRoot: '$(Build.SourcesDirectory)\Resources\ArmTemplates'     
-    SolutionBaseName: 'DFC.App.ContactUs'
-    BuildPlatform: 'any cpu'
-    BuildConfiguration: 'release'
+  ArmTemplateRoot: '$(Build.SourcesDirectory)\Resources\ArmTemplates'
+  SolutionBaseName: 'DFC.App.ContactUs'
+  BuildPlatform: 'any cpu'
+  BuildConfiguration: 'release'
 
 resources:
-  repositories:
-  - repository: self
-  - repository: dfc-devops
-    type: github
-    name: SkillsFundingAgency/dfc-devops
-    ref: refs/tags/v1.6.7
-    endpoint: 'GitHub (ESFA)'
+repositories:
+- repository: self
+- repository: dfc-devops
+  type: github
+  name: SkillsFundingAgency/dfc-devops
+  ref: refs/tags/v1.11.1
+  endpoint: 'GitHub (ESFA)'
 
-jobs:
-
-#Build and test resources
-# - template: AzureDevOpsTemplates/Build/dfc-arm-build.yml@dfc-devops
-#   parameters:
-#     ArmTemplateRoot: $(ArmTemplateRoot)
-
-#Build and test application
-- job: BuildDotNetCore
-  displayName: Build-DotNetCore
-  pool:
-    name: NCS - CI and CD
-    demands:
+pool:
+  name: NCS - CI and CD
+  demands:
     - msbuild
     - visualstudio
 
-  steps:
-  # build DFC.App.Help
-  - template: AzureDevOpsTemplates/Build/dfc-dotnetcore-build-sonar.yml@dfc-devops
-    parameters:
-      SolutionBaseName: $(SolutionBaseName)
-      BuildPlatform: $(BuildPlatform)
-      BuildConfiguration: $(BuildConfiguration)
-      DotNetCoreVersion: 2.2.402
-      PublishWebApp: true
-      TestSuffix: UnitTests
+stages:
+  - stage: Build
+    displayName: Build, Test and Analyze
+    jobs:
+    - job: TestArmTemplates
+      displayName: "Test & package ARM template(s)"
+      steps:
+        - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-arm-build.yml@dfc-devops
+          parameters:
+            ArmTemplateRoot: '${{ variables.ArmTemplateRoot }}'
+            SolutionBaseName: '${{ variables.SolutionBaseName }}'
+
+    #Build and test application
+    - job: BuildDotNetCore
+      displayName: Build-DotNetCore
+      steps:
+      - template: AzureDevOpsTemplates/Build/StepTemplates/dfc-dotnetcore-build-sonar.yml@dfc-devops
+        parameters:
+          SolutionBaseName: $(SolutionBaseName)
+          BuildPlatform: $(BuildPlatform)
+          BuildConfiguration: $(BuildConfiguration)
+          DotNetCoreVersion: 2.2.402
+          PublishWebApp: true
+          TestSuffix: UnitTests
