Added Nullable enable to all projects and refactored accordingly

--- a/DFC.App.ContactUs.Data.UnitTests/DFC.App.ContactUs.Data.UnitTests.csproj
+++ b/DFC.App.ContactUs.Data.UnitTests/DFC.App.ContactUs.Data.UnitTests.csproj
@@ -5,6 +5,7 @@
     <CodeAnalysisRuleSet>../UnitTests.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{795ab9c9-5acc-4d00-98e6-9cb5bfa224f3}</ProjectGuid>
     <AssemblyName>DFC.App.ContactUs.Data.UnitTests</AssemblyName>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
