--- a/DFC.App.ContactUs.MessageFunctionApp/DFC.App.ContactUs.MessageFunctionApp.csproj
+++ b/DFC.App.ContactUs.MessageFunctionApp/DFC.App.ContactUs.MessageFunctionApp.csproj
@@ -5,6 +5,7 @@
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <LangVersion>latest</LangVersion>
     <ProjectGuid>{6704b261-c73e-430f-839d-65ee898d9b35}</ProjectGuid>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
