--- a/DFC.App.ContactUs.Repository.CosmosDb/DFC.App.ContactUs.Repository.CosmosDb.csproj
+++ b/DFC.App.ContactUs.Repository.CosmosDb/DFC.App.ContactUs.Repository.CosmosDb.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{dfa77ac4-f819-4a3c-9eea-8b4c9cce6e61}</ProjectGuid>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
