--- a/DFC.App.ContactUs.IntegrationTests/DFC.App.ContactUs.IntegrationTests.csproj
+++ b/DFC.App.ContactUs.IntegrationTests/DFC.App.ContactUs.IntegrationTests.csproj
@@ -6,6 +6,7 @@
     <IsPackable>false</IsPackable>
     <CodeAnalysisRuleSet>../UnitTests.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{3fde4492-a7ba-497d-895d-8b872a7fafe0}</ProjectGuid>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
