--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -15,5 +15,21 @@
         "PartitionKey": "/PartitionKey"
       }
     }
+  },
+  "Policies": {
+    "HttpCircuitBreaker": {
+      "DurationOfBreak": "00:01:00",
+      "ExceptionsAllowedBeforeBreaking": 3
+    },
+    "HttpRetry": {
+      "BackoffPower": 2,
+      "Count": 3
+    }
+  },
+  "CmsApiClientOptions": {
+    "Timeout": "00:00:30",
+    "ApiKey": "[APIM key]",
+    "BaseAddress": "https://localhost/",
+    "SummaryEndpoint": "endpoint-is-missing-here"
   }
 }
