Refactored PagesController to split out static pages/views into their own controllers

--- a/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
@@ -30,6 +30,6 @@
     "Timeout": "00:00:30",
     "ApiKey": "[APIM key]",
     "BaseAddress": "https://localhost/",
-    "SummaryEndpoint": "endpoint-is-missing-here"
+    "SummaryEndpoint": "summary-endpoint"
   }
 }
