--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -30,6 +30,6 @@
     "Timeout": "00:00:30",
     "ApiKey": "[APIM key]",
     "BaseAddress": "https://localhost/",
-    "SummaryEndpoint": "endpoint-is-missing-here"
+    "SummaryEndpoint": "summary-endpoint"
   }
 }
