Added appsetting for external webchat URL

--- a/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
@@ -31,5 +31,8 @@
     "ApiKey": "[APIM key]",
     "BaseAddress": "https://localhost/",
     "SummaryEndpoint": "summary-endpoint"
+  },
+  "ChatOptions": {
+    "ChatUrl": "[URL to external webchat provider]"
   }
 }
