--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -16,11 +16,11 @@
       }
     },
     "SendGrid": {
-      "apiKey": "[send grid api key]",
-      "defaultNumberOfRetries": 2,
-      "defaultMinimumBackOff": 2,
-      "deltaBackOff": 3,
-      "defaultMaximumBackOff": 3
+      "ApiKey": "[send grid api key]",
+      "DefaultNumberOfRetries": 2,
+      "DefaultMinimumBackOff": 2,
+      "DeltaBackOff": 3,
+      "DefaultMaximumBackOff": 3
     }
   },
   "Policies": {
