--- a/DFC.App.ContactUs/DFC.App.ContactUs.csproj
+++ b/DFC.App.ContactUs/DFC.App.ContactUs.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CustomControls\GenericCheckbox\Templates\TemplateGenerator.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
@@ -64,6 +68,7 @@
 
   <ItemGroup>
     <Folder Include="CustomControls\GenericCheckbox\TagHelpers\" />
+    <Folder Include="CustomControls\GenericCheckbox\Templates\" />
   </ItemGroup>
 
 
