Prepare project for use of new nugets after removing page content service and cosmos repository

--- a/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
+++ b/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.App.ContactUs.Services.PageService" Version="1.0.46" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,6 +22,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DFC.App.ContactUs.Services.EventProcessorService\DFC.App.ContactUs.Services.EventProcessorService.csproj" />
   </ItemGroup>
 
 </Project>
