--- a/DFC.App.ContactUs/DFC.App.ContactUs.csproj
+++ b/DFC.App.ContactUs/DFC.App.ContactUs.csproj
@@ -20,6 +20,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="CorrelationId" Version="2.1.0" />
+    <PackageReference Include="DFC.App.ContactUs.Repository.CosmosDb" Version="1.0.0" />
+    <PackageReference Include="DFC.App.ContactUs.Services.PageService" Version="1.0.46" />
     <PackageReference Include="DFC.Logger.AppInsights" Version="1.0.8" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
@@ -41,7 +43,6 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\DFC.App.ContactUs.Repository.CosmosDb\DFC.App.ContactUs.Repository.CosmosDb.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.ApiProcessorService\DFC.App.ContactUs.Services.ApiProcessorService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.AreaRoutingService\DFC.App.ContactUs.Services.AreaRoutingService.csproj" />
@@ -49,7 +50,6 @@
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EmailService\DFC.App.ContactUs.Services.EmailService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EmailTemplateService\DFC.App.ContactUs.Services.EmailTemplateService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EventProcessorService\DFC.App.ContactUs.Services.EventProcessorService.csproj" />
-    <ProjectReference Include="..\DFC.App.ContactUs.Services.PageService\DFC.App.ContactUs.Services.PageService.csproj" />
   </ItemGroup>
 
 
