- Remove Correlation Id - Add Application Insights Telemetry - Add Request Tracing for Cosmos DB

--- a/DFC.App.ContactUs.Repository.CosmosDb/DFC.App.ContactUs.Repository.CosmosDb.csproj
+++ b/DFC.App.ContactUs.Repository.CosmosDb/DFC.App.ContactUs.Repository.CosmosDb.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
