--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -4,6 +4,9 @@
       "Default": "Debug"
     }
   },
+  "ApplicationInsights": {
+    "InstrumentationKey": "<<Intrumentation Key>>"
+  },
   "AllowedHosts": "*",
   "Configuration": {
     "CosmosDbConnections": {
