--- a/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
+++ b/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Compui.Cosmos" Version="1.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
