--- a/DFC.App.ContactUs.Services.ApiProcessorService/DFC.App.ContactUs.Services.ApiProcessorService.csproj
+++ b/DFC.App.ContactUs.Services.ApiProcessorService/DFC.App.ContactUs.Services.ApiProcessorService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{0115e81c-ec3b-4bc3-b6f7-f337edafbc6b}</ProjectGuid>
     <Nullable>enable</Nullable>
