--- a/DFC.App.ContactUs.Services.EventProcessorService/DFC.App.ContactUs.Services.EventProcessorService.csproj
+++ b/DFC.App.ContactUs.Services.EventProcessorService/DFC.App.ContactUs.Services.EventProcessorService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{3D595DAB-F7E9-4326-AE12-7312B1BC5753}</ProjectGuid>
     <Nullable>enable</Nullable>
