--- a/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{27878CD8-AD61-4A76-B6B2-F4E050051891}</ProjectGuid>
     <Nullable>enable</Nullable>
