--- a/DFC.App.ContactUs.Services.CmsApiProcessorService/DFC.App.ContactUs.Services.CmsApiProcessorService.csproj
+++ b/DFC.App.ContactUs.Services.CmsApiProcessorService/DFC.App.ContactUs.Services.CmsApiProcessorService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{864a9663-9f3e-438c-9337-8050e22bb694}</ProjectGuid>
     <Nullable>enable</Nullable>
