--- a/DFC.App.ContactUs.Services.EmailService/DFC.App.ContactUs.Services.EmailService.csproj
+++ b/DFC.App.ContactUs.Services.EmailService/DFC.App.ContactUs.Services.EmailService.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{7CCA05D7-98DB-4E91-BFF6-4D3AF66832AA}</ProjectGuid>
     <Nullable>enable</Nullable>
