Story dfcc 412 consume new nuget packages (#49)
* Updated to consume new Cosmos and SessionState Nugets

* Clean up experiment environment

* Updated to use new Nugets for Cosmos repository and Session State management

* DFCC-370
- Remove use of query string in page transitions  and use Session State Nuget instead
- Refactored unit tests to accommodate Nuget changes

* Updated  projects to netstandard2.1

* Updated readme

* Addressed some warnings

* DFCC-408 - Update webhook functionality to collect shared content objects from API

* Address SonarCloud issue

--- a/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{27878CD8-AD61-4A76-B6B2-F4E050051891}</ProjectGuid>
     <Nullable>enable</Nullable>
@@ -16,7 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
