--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Microsoft": "Trace"
+      }
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey" : "__InstrumentationKey__"
   },
   "AllowedHosts": "*",
   "Configuration": {
