--- a/DFC.App.ContactUs/DFC.App.ContactUs.csproj
+++ b/DFC.App.ContactUs/DFC.App.ContactUs.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="CorrelationId" Version="2.1.0" />
     <PackageReference Include="DFC.Compui.Sessionstate" Version="327027.0.0" />
+    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.7" />
     <PackageReference Include="DFC.Logger.AppInsights" Version="1.0.8" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
