--- a/DFC.App.ContactUs.Services.EmailService/DFC.App.ContactUs.Services.EmailService.csproj
+++ b/DFC.App.ContactUs.Services.EmailService/DFC.App.ContactUs.Services.EmailService.csproj
@@ -24,4 +24,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
+  </ItemGroup>
+
 </Project>
