--- a/DFC.App.ContactUs.Services.EmailTemplateService/DFC.App.ContactUs.Services.EmailTemplateService.csproj
+++ b/DFC.App.ContactUs.Services.EmailTemplateService/DFC.App.ContactUs.Services.EmailTemplateService.csproj
@@ -42,4 +42,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
+  </ItemGroup>
+
 </Project>
