--- a/DFC.App.ContactUs.Services.EmailTemplateService/DFC.App.ContactUs.Services.EmailTemplateService.csproj
+++ b/DFC.App.ContactUs.Services.EmailTemplateService/DFC.App.ContactUs.Services.EmailTemplateService.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Properties\**" />
+    <EmbeddedResource Remove="Properties\**" />
+    <None Remove="Properties\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Temp\EmailTemplates\CallbackTemplate.html" />
     <None Remove="Temp\EmailTemplates\OnlineMessageTemplate.html" />
   </ItemGroup>
@@ -36,10 +42,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
 
   <ItemGroup>
