--- a/DFC.App.ContactUs.UnitTests/DFC.App.ContactUs.UnitTests.csproj
+++ b/DFC.App.ContactUs.UnitTests/DFC.App.ContactUs.UnitTests.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DFC.App.ContactUs.Services.ApiProcessorService.UnitTests\DFC.App.ContactUs.Services.ApiProcessorService.UnitTests.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs\DFC.App.ContactUs.csproj" />
   </ItemGroup>
 
