--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -66,5 +66,9 @@
   "ChatOptions": {
     "HideProductionWarning": [ "bool", "-", true, "if", "production", "environment", "of", "webchat", "Url", false, "if", "not" ],
     "ChatUrl": "[URL to external webchat provider]"
+  },
+  "WebhookSettings": {
+    "SubscriptionApiEndpointUrl": "https://dfc-dev-api-eventgridsubscriptions-fa.azurewebsites.net/api/Execute",
+    "ApplicationWebhookReceiverEndpointUrl": "https://localhost:8081/api/webhook/ReceiveEvents"
   }
 }
