- Update template endpoint

--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -68,7 +68,7 @@
     "ChatUrl": "[URL to external webchat provider]"
   },
   "WebhookSettings": {
-    "SubscriptionApiEndpointUrl": "https://dfc-dev-api-eventgridsubscriptions-fa.azurewebsites.net/api/Execute",
+    "SubscriptionApiEndpointUrl": "[Subcription API Endpoint]",
     "ApplicationWebhookReceiverEndpointUrl": "https://localhost:8081/api/webhook/ReceiveEvents"
   }
 }
