Add include event types to mirror pages

--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -69,6 +69,7 @@
   },
   "WebhookSettings": {
     "SubscriptionApiEndpointUrl": "[Subcription API Endpoint]",
-    "ApplicationWebhookReceiverEndpointUrl": "https://localhost:8081/api/webhook/ReceiveEvents"
+    "ApplicationWebhookReceiverEndpointUrl": "https://localhost:8081/api/webhook/ReceiveEvents",
+    "IncludeEventTypes": [ "published", "unpublished", "deleted" ]
   }
 }
