--- a/DFC.App.ContactUs/DFC.App.ContactUs.csproj
+++ b/DFC.App.ContactUs/DFC.App.ContactUs.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="DFC.App.Subscription" Version="1.0.0" />
+    <PackageReference Include="DFC.App.Subscription.Data" Version="1.0.1" />
     <PackageReference Include="DFC.Compui.Sessionstate" Version="327027.0.0" />
     <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.11" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
