--- a/DFC.App.ContactUs.UnitTests/DFC.App.ContactUs.UnitTests.csproj
+++ b/DFC.App.ContactUs.UnitTests/DFC.App.ContactUs.UnitTests.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\DFC.App.ContactUs\DFC.App.ContactUs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HostedServiceTests\" />
+  </ItemGroup>
+
 </Project>
