--- a/DFC.App.ContactUs/DFC.App.ContactUs.csproj
+++ b/DFC.App.ContactUs/DFC.App.ContactUs.csproj
@@ -20,7 +20,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="DFC.Compui.Sessionstate" Version="327027.0.0" />
-    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.10" />
+    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Data" Version="1.3.0" />
+    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Webhook" Version="1.2.3" />
+    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.11" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
