remove local projects

--- a/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
+++ b/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="DFC.Compui.Cosmos" Version="1.0.34" />
+    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Data" Version="1.5.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,10 +27,6 @@
 
   <ItemGroup>
     <Folder Include="Models\Subscription\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\dfc-compui-subscriptions-pkg-netstandard\DFC.Compui.Subscriptions.Pkg.Data\DFC.Compui.Subscriptions.Pkg.Data.csproj" />
   </ItemGroup>
 
 </Project>
