--- a/DFC.App.ContactUs.Services.CacheContentService.UnitTests/DFC.App.ContactUs.Services.CacheContentService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.CacheContentService.UnitTests/DFC.App.ContactUs.Services.CacheContentService.UnitTests.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.CacheContentService\DFC.App.ContactUs.Services.CacheContentService.csproj" />
+    <ProjectReference Include="..\DFC.App.ContactUs\DFC.App.ContactUs.csproj" />
   </ItemGroup>
 
 </Project>
