--- a/DFC.App.ContactUs/Properties/launchSettings.json
+++ b/DFC.App.ContactUs/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "APPINSIGHTS_INSTRUMENTATIONKEY": "76582176-9a43-49e2-8284-4b3b02bdd282"
       }
     },
     "DFC.App.ContactUs": {
