--- a/DFC.App.ContactUs.Services.ApiProcessorService.UnitTests/DFC.App.ContactUs.Services.ApiProcessorService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.ApiProcessorService.UnitTests/DFC.App.ContactUs.Services.ApiProcessorService.UnitTests.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DFC.App.ContactUs.Services.ApiProcessorService\DFC.App.ContactUs.Services.ApiProcessorService.csproj" />
+    <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.CmsApiProcessorService\DFC.App.ContactUs.Services.CmsApiProcessorService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EventProcessorService\DFC.App.ContactUs.Services.EventProcessorService.csproj" />
   </ItemGroup>
