--- a/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Data" Version="1.5.0" />
+    <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.67" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,7 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
-    <ProjectReference Include="..\DFC.App.ContactUs.Services.ApiProcessorService\DFC.App.ContactUs.Services.ApiProcessorService.csproj" />
   </ItemGroup>
 
 </Project>
