--- a/DFC.App.ContactUs.Services.EventProcessorService.UnitTests/DFC.App.ContactUs.Services.EventProcessorService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.EventProcessorService.UnitTests/DFC.App.ContactUs.Services.EventProcessorService.UnitTests.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EventProcessorService\DFC.App.ContactUs.Services.EventProcessorService.csproj" />
   </ItemGroup>
 
