--- a/DFC.App.ContactUs.Services.EventProcessorService/DFC.App.ContactUs.Services.EventProcessorService.csproj
+++ b/DFC.App.ContactUs.Services.EventProcessorService/DFC.App.ContactUs.Services.EventProcessorService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -22,10 +22,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
   </ItemGroup>
 
 </Project>
