--- a/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
+++ b/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
@@ -12,8 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DFC.Compui.Cosmos" Version="1.0.34" />
-    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Data" Version="1.5.0" />
+    <PackageReference Include="DFC.Compui.Cosmos" Version="1.0.41" />
+    <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.67" />
+    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.28" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
