--- a/DFC.App.ContactUs/DFC.App.ContactUs.csproj
+++ b/DFC.App.ContactUs/DFC.App.ContactUs.csproj
@@ -24,10 +24,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="DFC.Compui.Sessionstate" Version="327027.0.0" />
-    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Data" Version="1.5.0" />
-    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Netstandard" Version="1.0.0" />
-    <PackageReference Include="DFC.Compui.Subscriptions.Pkg.Webhook" Version="1.4.0" />
-    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.22" />
+    <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.67" />
+    <PackageReference Include="DFC.Compui.Telemetry" Version="1.0.28" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
@@ -55,7 +53,6 @@
     <ProjectReference Include="..\DFC.App.ContactUs.Services.CmsApiProcessorService\DFC.App.ContactUs.Services.CmsApiProcessorService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EmailService\DFC.App.ContactUs.Services.EmailService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.EmailTemplateService\DFC.App.ContactUs.Services.EmailTemplateService.csproj" />
-    <ProjectReference Include="..\DFC.App.ContactUs.Services.EventProcessorService\DFC.App.ContactUs.Services.EventProcessorService.csproj" />
   </ItemGroup>
 
 
