--- a/DFC.App.ContactUs.Services.CacheContentService.UnitTests/DFC.App.ContactUs.Services.CacheContentService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.CacheContentService.UnitTests/DFC.App.ContactUs.Services.CacheContentService.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.77" />
     <PackageReference Include="FakeItEasy" Version="6.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -35,6 +36,10 @@
     <ProjectReference Include="..\DFC.App.ContactUs.Data\DFC.App.ContactUs.Data.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs.Services.CacheContentService\DFC.App.ContactUs.Services.CacheContentService.csproj" />
     <ProjectReference Include="..\DFC.App.ContactUs\DFC.App.ContactUs.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="WebhooksServiceTests\" />
   </ItemGroup>
 
 </Project>
