--- a/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.77" />
     <PackageReference Include="FakeItEasy" Version="6.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
