- Update app settings - Update ARM templates

--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -67,9 +67,17 @@
     "HideProductionWarning": [ "bool", "-", true, "if", "production", "environment", "of", "webchat", "Url", false, "if", "not" ],
     "ChatUrl": "[URL to external webchat provider]"
   },
-  "WebhookSettings": {
-    "SubscriptionApiEndpointUrl": "[Subcription API Endpoint]",
-    "ApplicationWebhookReceiverEndpointUrl": "https://localhost:8081/api/webhook/ReceiveEvents",
-    "IncludeEventTypes": [ "published", "unpublished", "deleted" ]
+  "SubscriptionSettings": {
+    "Endpoint": "https://localhost:8081/api/webhook/ReceiveEvents",
+    "SubscriptionServiceEndpoint": "[Subcription API Endpoint]",
+    "Filter": {
+      "IncludeEventTypes": [ "published", "unpublished", "deleted" ],
+      "PropertyContainsFilters": [
+        {
+          "Key": "subject",
+          "Values": [ "e11a1137-01ca-446a-b60f-0de5ad5321cc", "e11a1195-801d-479b-84b6-f5e443abfb86" ]
+        }
+      ]
+    }
   }
 }
