All project content migrated over.

--- a/DFC.App.ContactUs.UI.FunctionalTests/DFC.App.ContactUs.UI.FunctionalTests.csproj
+++ b/DFC.App.ContactUs.UI.FunctionalTests/DFC.App.ContactUs.UI.FunctionalTests.csproj
@@ -26,4 +26,13 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.Environment.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.Project.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
