--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.Project.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.Project.json
@@ -1,7 +1,7 @@
 ﻿{
-  "ContactUs": {
-    "Browser": "__Browser__",
-    "BaseUrl": "__BaseUrl__",
+  "ContactUsConfiguration": {
+    "Browser": "chrome",
+    "BaseUrl": "https://sit-beta.nationalcareersservice.org.uk",
     "BuildNumber": "__BuildNo__",
     "EnvironmentName": "__Environment__"
   }
